crates/guicons-core/src/snapshots/guicons_core__parse__tests__decompose_bootstrap_style_leading_digit_name_is_not_mistaken_for_size.snap
---
source: crates/guicons-core/src/parse.rs
expression: "decompose_iconify_id(\"bi:0-circle\", &manifest)"
---
Some(
    (
        "0-circle",
        None,
        None,
    ),
)
