crates/guicons-core/src/snapshots/guicons_core__parse__tests__decompose_fluent_style_size_and_variant.snap
---
source: crates/guicons-core/src/parse.rs
expression: "decompose_iconify_id(\"fluent:add-square-multiple-24-regular\", &manifest)"
---
Some(
    (
        "add-square-multiple",
        Some(
            24,
        ),
        Some(
            "regular",
        ),
    ),
)
