crates/guicons-core/src/snapshots/guicons_core__parse__tests__decompose_material_symbols_style_compound_variant_matches_greedily.snap
---
source: crates/guicons-core/src/parse.rs
expression: "decompose_iconify_id(\"material-symbols:3d-rotation-outline-rounded\",\n&manifest)"
---
Some(
    (
        "3d-rotation",
        None,
        Some(
            "outline-rounded",
        ),
    ),
)
