crates/guicons-core/src/snapshots/guicons_core__parse__tests__decompose_phosphor_style_bare_default_has_no_suffix.snap
---
source: crates/guicons-core/src/parse.rs
expression: "decompose_iconify_id(\"ph:acorn\", &manifest)"
---
Some(
    (
        "acorn",
        None,
        None,
    ),
)
