crates/guicons-core/src/snapshots/guicons_core__parse__tests__decompose_phosphor_style_with_variant_suffix.snap
---
source: crates/guicons-core/src/parse.rs
expression: "decompose_iconify_id(\"ph:acorn-bold\", &manifest)"
---
Some(
    (
        "acorn",
        None,
        Some(
            "bold",
        ),
    ),
)
