crates/guicons-core/src/snapshots/guicons_core__parse__tests__default_provider_fills_in_iconify_id.snap
---
source: crates/guicons-core/src/parse.rs
expression: entries
---
[
    IconEntry {
        key: "settings-filled",
        family: "settings",
        variant: Some(
            "filled",
        ),
        size: Some(
            24,
        ),
        source: Iconify(
            "fluent:settings-24-filled",
        ),
        dynamic: false,
        windows_ico: None,
        paint: None,
        span: 54..56,
        file: "",
    },
]
