crates/guicons-core/src/snapshots/guicons_core__parse__tests__defaults_fall_back_to_manifest_and_workspace_dirs_when_empty.snap
---
source: crates/guicons-core/src/parse.rs
expression: defaults
---
ManifestDefaults {
    roots: [
        "/workspace",
        "/workspace",
    ],
    provider: None,
    size: None,
    paint: None,
}
