crates/guicons-core/src/snapshots/guicons_core__parse__tests__defaults_reject_unsupported_field.snap
---
source: crates/guicons-core/src/parse.rs
expression: errors
---
[
    "unexpected field(s): `bogus` (expected one of: `root`, `roots`, `provider`, `size`, `paint`)",
]
