crates/guicons-core/src/snapshots/guicons_core__parse__tests__defaults_reject_wrong_field_type.snap
---
source: crates/guicons-core/src/parse.rs
expression: errors
---
[
    "expected u16, found string",
]
