crates/guicons-core/src/snapshots/guicons_core__parse__tests__explicit_iconify_overrides_default_provider.snap
---
source: crates/guicons-core/src/parse.rs
expression: entries
---
[
    IconEntry {
        key: "settings",
        family: "settings",
        variant: None,
        size: None,
        source: Iconify(
            "phosphor:gear",
        ),
        dynamic: false,
        windows_ico: None,
        paint: None,
        span: 36..60,
        file: "",
    },
]
