crates/guicons-core/src/snapshots/guicons_core__parse__tests__explicit_paint_on_a_glyph_is_an_error.snap
---
source: crates/guicons-core/src/parse.rs
expression: errors
---
[
    "icon manifest entry `spinner` can't be painted: `paint` only recolors SVG icons",
]
